# PartSelectAI

./: README.md
partselect_ai_backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis_manager.py
partselect_ai_backend/agents/: agent.py  tools.py
partselect_ai_backend/routes/: chat.py
partselect_ai_frontend/: README.md  package-lock.json  package.json
partselect_ai_frontend/src/: App.css  App.js
partselect_ai_frontend/src/api/: api.js
partselect_ai_frontend/src/components/: ChatWindow.css  ChatWindow.js
